overflow issue Fix, custom scroll bar, minor fixes

--- a/main.css
+++ b/main.css
@@ -1,4 +1,24 @@
 @import url(https://use.typekit.net/jmk3xov.css);
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f0e8e8;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #690088;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #4c0161;
+}
+
 canvas {
   position: fixed;
   top: 0;
@@ -17,11 +37,9 @@ canvas {
 
 
 main {
-  width: 100vw;
   color: white;
   z-index: 99;
   position: absolute;
-  width: 100%;
   margin: 0px auto;
   padding: 120px 0px;
   
